--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.1",
     "next": "15.2.0",
     "react": "^19.0.0",
